--- a/.pages.yml
+++ b/.pages.yml
@@ -4,7 +4,7 @@ content:
     label: Posts
     type: collection
     path: 'content/posts'
-    filename: '{slug}.md'
+    filename: fields.slug
     view:
       fields: [ title, published, date ]
     fields:
